@@ -1,6 +1,6 @@
 Package: spatstat.explore
-Version: 3.4-3.007
-Date: 2025-06-20
+Version: 3.4-3.008
+Date: 2025-07-03
 Title: Exploratory Data Analysis for the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre", "cph"),
