@@ -14,4 +14,4 @@ date version nhelpfiles nobjects ndatasets Rlines srclines
 "2024-10-22" "3.3-3" 235 525 0 31903 6364
 "2025-03-20" "3.4-0" 240 534 0 33260 6364
 "2025-05-21" "3.4-3" 240 537 0 33450 6364
-"2025-06-20" "3.4-3.007" 242 562 0 34429 6364
+"2025-07-03" "3.4-3.008" 242 562 0 34429 6364
